tests/negative/parser/fn_decl_with_ability_with_init.orng
ability My_Ability = Int

fn main() -> Int {
    with My_Ability(4) {
        f()
    }
}

fn f() -> Int with My_Ability(4) { My_Ability }